objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action desired for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationName__c</fullName>
        <description>Name of person who activates this item</description>
        <label>Activation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Additional_Discount__c</fullName>
        <label>Additional Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset that this Order Product was pushed to by Order To Asset</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Product</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset refereced by this line item. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle.</description>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the line item.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Billing Account)</relationshipLabel>
        <relationshipName>BillingAccountOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CpqCardinalityMessage__c</fullName>
        <label>Cpq Cardinality Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CpqMessageData__c</fullName>
        <label>Cpq Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyPaymentMode__c</fullName>
        <label>Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <label>Effective One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuantity__c</fullName>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The fulfilment status of this line item. Populated and updated by order management processes for submitted orders.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PONR</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InCartQuantityMap__c</fullName>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAccepted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is line item editable</description>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProductTrackAgreement__c</fullName>
        <description>Denotes if product is tracked as part of agreement</description>
        <formula>PricebookEntry.Product2.vlocity_cmt__TrackAsAgreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Track Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute value data.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONNode__c</fullName>
        <label>JSONNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineItemNumString__c</fullName>
        <label>LineItemNumString</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineItemNumber__c</fullName>
        <label>Line Item Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MRC__c</fullName>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MonthlyTotal__c</fullName>
        <formula>Quantity  *  vlocity_cmt__RecurringCharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCalculatedPrice__c</fullName>
        <description>System discounted price ie after Pricer run</description>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCharge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeDiscountPrice__c</fullName>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyPrice__c</fullName>
        <label>One Time Loyalty Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeManualDiscount__c</fullName>
        <description>Discount percentage entered by CSR</description>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCalculatedPrice__c</fullName>
        <label>Overage Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCharge__c</fullName>
        <label>Overage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageDiscountPrice__c</fullName>
        <label>Overage Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageManualDiscount__c</fullName>
        <label>Overage Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>Overage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageUOM__c</fullName>
        <label>Overage UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Minute</fullName>
                    <default>true</default>
                    <label>Per Minute</label>
                </value>
                <value>
                    <fullName>Per Text</fullName>
                </value>
                <value>
                    <fullName>Per Gigabyte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentItemId__c</fullName>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentLineItemNumber__c</fullName>
        <label>Parent Line Item Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentOrderProduct</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Order Line Item</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this line item stored as a JSON structure.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttribXN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use JSONAttribute__c.</description>
        <label>ProductAttribXN</label>
        <referenceTo>vlocity_cmt__ProductAttribXN__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>ProductAttribXN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this item within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>(NOTE: The functionality of this field is replaced by the Action, Sub-Action and Fulfilment Status fields.) The desired provisioning action for the asset identified on this line item. Values include New (add), Active (no change), Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Query__c</fullName>
        <label>Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCalculatedPrice__c</fullName>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCharge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringDiscountPrice__c</fullName>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringManualDiscount__c</fullName>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringUOM__c</fullName>
        <description>The recurring price unit of measure.</description>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <formula>Order.vlocity_cmt__RequestDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestedChange__c</fullName>
        <label>Requested Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestedCompletionDate__c</fullName>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootItemId__c</fullName>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Service Account)</relationshipLabel>
        <relationshipName>ServiceAccountOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action requested for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ThorJeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>